--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,67 @@
 .App {
-  text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#title-logo{
+  height: 25vw;
+  width: 25vw;
+
+  position: absolute;
+  top: -2vh;
+  left: 2vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes slideInFromLeftRed {
+  0% {
+    left: 55vw;
+    opacity: 0;
+  }
+  100% {
+    left: 75vw;
+    opacity: 1;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#red-sun{
+  position: absolute;
+  animation: 2s ease-in-out slideInFromLeftRed;
+  left: 75vw;
+  top: 50vh;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes slideInFromLeftYellow {
+  0% {
+    left: 45vw;
+    opacity: 0;
+  }
+  100% {
+    left: 60vw;
+    opacity: 1;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#yellow-sun{
+  position: absolute;
+  /* This section calls the slideInFromLeft animation we defined above */
+  animation: 2s ease-in-out slideInFromLeftYellow;
+  top: 25vh;
+  left: 60vw;
+}
+
+#table-container{
+  position: absolute;
+  right: 10vw;
+  top: 2vh;
+  background-color: rgba(250,250,250,0.25);
+  overflow-x: auto;
+  height: 50vh;
+  width: 50vw;
+  border-radius: 5px;
+  z-index: 100;
+}
+
+.super-app-theme--header{
+  background-color: rgba(0,0,0,0.5);
+  color: #FAFF00;
+  font-weight: bolder;
 }
